# spykt-school

./: .gitignore  CLAUDE.md  DECISIONS_NEEDED.md  EVAL_CHANGES.md  Makefile  PROGRESS.md  README.md  autonomy.yaml  models.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/web/: package-lock.json  package.json  railway.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/coach/: page.tsx
apps/web/app/parent/: page.tsx
apps/web/app/student/: page.tsx
evals/: run_gate.py
evals/gateway_redteam/: README.md  build_suite.py  cases.jsonl  harness.py  report.json  test_cases.py
evals/gateway_redteam/raw/: contact.jsonl  formats.jsonl  names.jsonl  places.jsonl
evals/gateway_redteam/tests/: test_redteam_gate.py
evals/sentinel/: README.md  build_corpus.py  corpus_heldout.jsonl  corpus_train.jsonl  run_recall.py  test_corpus.py
evals/sentinel/raw/: explicit.jsonl  masked.jsonl  negatives.jsonl  oblique.jsonl
evals/sentinel/tests/: test_run_recall.py
evals/tests/: test_run_gate.py
infra/clerk/: README.md
infra/railway/: provision.sh
infra/supabase/: docker-compose.yml  provision.sh
infra/supabase/migrations/: 0001_core.sql  0002_safety_spine.sql
infra/supabase/tests/: test_rls_smoke.py
services/api/: pyproject.toml  railway.json
services/api/spykt_api/: __init__.py  main.py
services/api/tests/: test_healthz.py
services/orchestrator/: pyproject.toml  railway.json
services/orchestrator/spykt_orchestrator/: __init__.py  autonomy.py  main.py
services/orchestrator/tests/: test_autonomy_enforcement.py  test_autonomy_postgres.py  test_orchestrator_heartbeat.py
services/workers/: pyproject.toml  railway.json
services/workers/spykt_workers/: __init__.py  escalation.py  holding_copy.py  main.py  sentinel.py  zuzu_holding.py
services/workers/spykt_workers/prompts/: __init__.py  sentinel_v1.py
services/workers/tests/: test_escalation.py  test_sentinel.py  test_workers_heartbeat.py  test_zuzu_holding.py
specs/: 00-PRD.md  01-TECH_SPEC.md  02-UIUX_SPEC.md  04-REFINEMENT_LOG.md
tests/integration/: test_class1_end_to_end.py  test_g1_gateway_client_audit.py
