[project]
name = "spykt-school"
version = "0.0.1"
description = "Spykt Autonomous Prep Institution — monorepo root (workspace only, not a package)"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "services/api",
    "services/orchestrator",
    "services/workers",
    "packages/anthropic-client",
    "packages/contracts",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["services", "packages", "evals", "infra"]

[tool.ruff]
line-length = 110
target-version = "py312"
