[project]
name = "spykt-api"
version = "0.0.1"
description = "FastAPI gateway (01-TECH_SPEC §8) — Railway svc: api"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spykt_api"]
