[project]
name = "spykt-orchestrator"
version = "0.0.1"
description = "A0 Orchestrator — event consumer + weekly-cycle state machine (01-TECH_SPEC §6) — Railway svc: orchestrator"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spykt_orchestrator"]
